--- a/ds-blog/src/pages/BlogEntry/BlogEntryDetail/BlogEntryDetail.css
+++ b/ds-blog/src/pages/BlogEntry/BlogEntryDetail/BlogEntryDetail.css
@@ -23,7 +23,10 @@ article {
   }
 
   img {
-    max-height: 426px;
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
   }
 
   p {
